@@ -14,7 +14,7 @@ Multifunctional Discord Bot
 ## Support
 * Coming Soon™
 
-## Build with
+## Built with
 * [Java 11](https://openjdk.java.net/projects/jdk/11/) - Programming Language
 * [JDA 3.8.3_460](https://github.com/DV8FromTheWorld/JDA) - Java Wrapper for Discord API
 * [JDA-Utilities 2.1.5](https://github.com/JDA-Applications/JDA-Utilities) - JDA Commands Extension
